# s3-connector-for-pytorch

./: .buildinfo  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: environment.pickle
.doctrees/autoapi/s3torchconnector/: index.doctree
.doctrees/autoapi/s3torchconnector/lightning/: index.doctree
.doctrees/autoapi/s3torchconnector/s3checkpoint/: index.doctree
.doctrees/autoapi/s3torchconnector/s3iterable_dataset/: index.doctree
.doctrees/autoapi/s3torchconnector/s3map_dataset/: index.doctree
.doctrees/autoapi/s3torchconnector/s3reader/: index.doctree
.doctrees/autoapi/s3torchconnector/s3writer/: index.doctree
.github/workflows/: python-checks.yml  rust-checks.yml  wheels.yml
_modules/: index.html
_modules/s3torchconnector/: s3checkpoint.html  s3iterable_dataset.html  s3map_dataset.html  s3reader.html  s3writer.html
_modules/s3torchconnector/lightning/: s3_lightning_checkpoint.html
_sources/autoapi/s3torchconnector/: index.rst.txt
_sources/autoapi/s3torchconnector/lightning/: index.rst.txt
autoapi/: index.html
autoapi/s3torchconnector/: index.html
autoapi/s3torchconnector/lightning/: index.html
autoapi/s3torchconnector/s3checkpoint/: index.html
autoapi/s3torchconnector/s3iterable_dataset/: index.html
autoapi/s3torchconnector/s3map_dataset/: index.html
autoapi/s3torchconnector/s3reader/: index.html
autoapi/s3torchconnector/s3writer/: index.html
s3torchconnector/: post_install.py  pyproject.toml  setup.cfg  setup.py
s3torchconnector/tst/e2e/: conftest.py
(+5 files in other folders)
