[build-system]
requires = ["setuptools", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "s3torchconnector"
version = "0.1.0"
description = "S3 connector integration for PyTorch"
requires-python = ">=3.8,<3.13"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

dependencies = ["requests"]

